PinWatchUISupport API created, UI moved into spi.debugger.ui module.

--- a/spi.debugger.ui/src/org/netbeans/modules/debugger/resources/Bundle.properties
+++ b/spi.debugger.ui/src/org/netbeans/modules/debugger/resources/Bundle.properties
@@ -118,3 +118,4 @@ HINT_CURRENT_EXP_LINE_DBP=Current Program Counter In Expression + Disabled Break
 HINT_CURRENT_EXP_LINE_DCBP=Current Program Counter In Expression + Disabled Conditional Breakpoint
 HINT_CURRENT_EXP=Current Expression
 
+HINT_WATCH_PIN=Watch
