BlackBox modular testing.

--- a/java.j2seproject/src/org/netbeans/modules/java/j2seproject/problems/Bundle.properties
+++ b/java.j2seproject/src/org/netbeans/modules/java/j2seproject/problems/Bundle.properties
@@ -57,7 +57,9 @@ ResolveBrokenRuntimePlatform.sourceLevelWarning.text=Warning: Decreasing source 
 
 #ModulePathsProblemsProvider
 TXT_InvalidModulePaths=Invalid Test Module Paths
-DESC_InvalidModulePaths=The Test Module Paths correspond to non-modular sources but there is module-info.java in the project sources.\n\
+DESC_InvalidModulePathsWhiteBox=The Test Module Paths correspond to non-modular sources but there is module-info.java in the project sources.\n\
+  In such a project configuration unit tests may not compile or execute.
+DESC_InvalidModulePathsBlackBox=The Test Module Paths correspond to non-modular tests but there is module-info.java in the test sources.\n\
   In such a project configuration unit tests may not compile or execute.
 TXT_InvalidClassPaths=Invalid Test Class Paths
 DESC_InvalidClassPaths=The Test Class Paths correspond to modular sources but there is no module-info.java in the project sources.\n\
