--- a/maven.indexer/nbproject/project.properties
+++ b/maven.indexer/nbproject/project.properties
@@ -42,10 +42,12 @@ test.config.stableBTD.includes=**/*Test.class
 is.autoload=true
 javac.source=1.8
 javac.compilerargs=-Xlint -Xlint:-serial
-release.external/indexer-core-5.1.1-patched.jar=modules/ext/maven/indexer-core-5.1.1-patched.jar
-release.external/indexer-artifact-5.1.1.jar=modules/ext/maven/indexer-artifact-5.1.1.jar
-release.external/lucene-core-3.6.2.jar=modules/ext/maven/lucene-core-3.6.2.jar
-release.external/lucene-highlighter-3.6.2.jar=modules/ext/maven/lucene-highlighter-3.6.2.jar
+release.external/indexer-core-6.0-SNAPSHOT-patched.jar=modules/ext/maven/indexer-core-6.0-SNAPSHOT-patched.jar
+release.external/lucene-core-5.3.1.jar=modules/ext/maven/lucene-core-5.3.1.jar
+release.external/lucene-highlighter-5.3.1.jar=modules/ext/maven/lucene-highlighter-5.3.1.jar
+release.external/lucene-queryparser-5.3.1.jar=modules/ext/maven/lucene-queryparser-5.3.1.jar
+release.external/lucene-analyzers-common-5.3.1.jar=modules/ext/maven/lucene-analyzers-common-5.3.1.jar
+release.external/javax.annotation-api-1.2.jar=modules/ext/maven/javax.annotation-api-1.2.jar
 # XXX so long as Lucene is bundled here:
 sigtest.gen.fail.on.error=false
 
