fixing Bug #222549 Do not add toolchain dir into PATH var

--- a/cnd.toolchain/src/org/netbeans/modules/cnd/toolchain/ui/options/Bundle.properties
+++ b/cnd.toolchain/src/org/netbeans/modules/cnd/toolchain/ui/options/Bundle.properties
@@ -387,3 +387,19 @@ UserAddedToolCollection.tooltip.text=Tool collection "{0}" was added by user and
 
 ToolsPanel.Cygwin32OnJDK64.warning=It is advised to start 32-bit NetBeans to use 32-bit Cygwin.
 ToolsPanel.Cygwin64OnJDK32.warning=It is advised to start 64-bit NetBeans to use 64-bit Cygwin.
+
+MODIFY_PATH_VARIABLE=Path Variable
+ToolCollectionPanel.btPathEdit.text=...
+PathEnvVariables.addLabel.text=Add Tool Collection Path in the PATH Environment Variable
+PathEnvVariables.toolsLabel.text==
+PathEnvVariables.toolsVariableTextField.text=TOOLS_PATH
+PathEnvVariables.utilitiesVariableTextField.text=UTILITIES_PATH
+PathEnvVariables.utilitiesLabel.text==
+PathEnvVariables.modifyBuildLabel.text=Modify Clean, Build, Compile Commands Path:
+PathEnvVariables.modifyRunLabel.text=Modify Run Command Path:
+ModifyBuildPath=${TOOLS_PATH};${UTILITIES_PATH};${PATH}
+ModifyRunPath=${PATH};${TOOLS_PATH};${UTILITIES_PATH}
+PathEnvVariables.pathBuildVariableTextField.text=PATH
+PathEnvVariables.pathBuildVariableLabel.text==
+PathEnvVariables.pathRunVariableTextField.text=PATH
+PathEnvVariables.pathRunVariableLabel.text==
