--- a/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/api/configurations/Bundle.properties
+++ b/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/api/configurations/Bundle.properties
@@ -346,6 +346,8 @@ RebuildPropChangedTxt=Rebuild if properties have changed
 RebuildPropChangedHint=Rebuild entire project if project properties have changed
 PlatformSpecificTxt=Platform Specific Configuration
 PlatformSpecificHint=Configuration is platform specific.
+PrependToolCollectionPathTxt=Prepend Tool Collection Path
+PrependToolCollectionPathHint=Prepend tool collection path to PATH environment variable.
 
 # CompilerSet2Configuration
 NOT_FOUND={0} - not found
