--- a/lib.jshell.agent/build.xml
+++ b/lib.jshell.agent/build.xml
@@ -14,7 +14,7 @@
                 <exclude name="META-INF/**"/>
             </patternset>
         </unjar>
-        <javac srcdir="agentsrc" destdir="build/agent/classes" debug="true" deprecation="true">
+        <javac srcdir="agentsrc" destdir="build/agent/classes" debug="true" deprecation="true" target="1.7" source="1.7">
 	    <classpath>
 		<pathelement path="${agentsrc.asm.cp}"/>
 	    </classpath>
