--- a/jshell.support/src/org/netbeans/modules/jshell/project/Bundle.properties
+++ b/jshell.support/src/org/netbeans/modules/jshell/project/Bundle.properties
@@ -55,3 +55,4 @@ JShellOptions2.btnBrowseClass.text=Browse...
 JShellOptions2.lblLoaderSelect.text=Class loader:
 JShellOptions2.lblSource.text=Class:
 JShellOptions2.lblMember.text=Member:
+JShellOptions2.cSwingExecutor.text=Execute in Swing Event Thread
