Default module name sould be appended with 'Test' When its module-info.java is created in a test src root.

--- a/java.project.ui/src/org/netbeans/modules/java/project/ui/resources/module-info.java.template
+++ b/java.project.ui/src/org/netbeans/modules/java/project/ui/resources/module-info.java.template
@@ -3,7 +3,7 @@
 <#assign licenseLast = " */">
 <#include "${project.licensePath}">
 
-<#if project.name?? && project.name != "">
-module ${project.name} {
+<#if moduleName?? && moduleName != "">
+module ${moduleName} {
 }
 </#if>
