fixing Bug #258806 Implement Run/Debug launchers UI

--- a/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/launchers/actions/ui/Bundle.properties
+++ b/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/launchers/actions/ui/Bundle.properties
@@ -1,6 +1,6 @@
 # DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
 #
-# Copyright 2013 Oracle and/or its affiliates. All rights reserved.
+# Copyright 2016 Oracle and/or its affiliates. All rights reserved.
 #
 # Oracle and Java are registered trademarks of Oracle and/or its affiliates.
 # Other names may be trademarks of their respective owners.
@@ -36,6 +36,24 @@
 #
 # Contributor(s):
 #
-# Portions Copyrighted 2013 Sun Microsystems, Inc.
-LBL_MoreBuildActionsAction_Name=More Build Commands
-LBL_ManageLaunchersAction_Name=Manage Launchers...
+# Portions Copyrighted 2016 Sun Microsystems, Inc.
+
+Launchers_Title=Launchers
+LaunchersPanel.launchersListLabel.text=Launchers &List
+LaunchersPanel.addButton.text=&Add
+LaunchersPanel.removeButton.text=&Remove
+LaunchersPanel.copyButton.text=&Copy
+LaunchersPanel.launcherNameLabel.text=Launcher &Name
+LaunchersPanel.runLabel.text=Run Command
+LaunchersPanel.buildLabel.text=Build Command
+LaunchersPanel.runDirLabel.text=Run Directory
+LaunchersPanel.symbolLabel.text=Symbol Files
+LaunchersPanel.envLabel.text=Environment Variables
+LaunchersPanel.addEnvButton.text=Add
+LaunchersPanel.removeEnvButton.text=Remove
+EnvName=Name
+EnvValue=Value
+LaunchersPanel.publicCheckBox.text=Public Launcher
+COMMON_PROPERTIES=Common Properties
+LaunchersPanel.upButton.text=Up
+LaunchersPanel.downButton.text=Down
