fixing Bug #258806 Implement Run/Debug launchers UI - add Project properties Launcher node

--- a/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/launchers/actions/ui/Bundle.properties
+++ b/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/launchers/actions/ui/Bundle.properties
@@ -40,11 +40,11 @@
 
 Launchers_Title=Launchers
 LaunchersPanel.launchersListLabel.text=Launchers &List
-LaunchersPanel.addButton.text=&Add
+LaunchersPanel.addButton.text=Ne&w
 LaunchersPanel.removeButton.text=&Remove
 LaunchersPanel.copyButton.text=&Copy
 LaunchersPanel.launcherNameLabel.text=Launcher &Name
-LaunchersPanel.runLabel.text=Run Co&mmand
+LaunchersPanel.runLabel.text=Run C&ommand
 LaunchersPanel.buildLabel.text=Bu&ild Command
 LaunchersPanel.runDirLabel.text=Run Director&y
 LaunchersPanel.symbolLabel.text=&Symbol Files
