--- a/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/ui/customizer/Bundle.properties
+++ b/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/ui/customizer/Bundle.properties
@@ -65,6 +65,7 @@ LBL_PACKAGING_NODE=Packaging
 LBL_QT_NODE=Qt
 LBL_Formatting=Formatting
 LBL_License=License Headers
+LBL_Launchers=Launchers
 
 # Property Window
 CONFIGURATIONS_EDITOR_TITLE=Configurations
