#258829 - Search History menu entry is missing keyboard shortcut when multiple projects are selected Add mnemonic to search projects history item.

--- a/subversion/src/org/netbeans/modules/subversion/ui/history/Bundle.properties
+++ b/subversion/src/org/netbeans/modules/subversion/ui/history/Bundle.properties
@@ -44,7 +44,7 @@ CTL_MenuItem_SearchHistory = Search &History...
 CTL_MenuItem_SearchHistory_Context = Search &History...
 CTL_MenuItem_SearchHistory_Context_Multiple = Search Files &History...
 # {0} - number of selected NetBeans projects
-CTL_MenuItem_SearchHistory_Projects = Search {0} Projects History...
+CTL_MenuItem_SearchHistory_Projects = Search {0} Projects &History...
 
 # {0} - varying title of the tab depending on the selected nodes, can be A.java, 2 Projects, etc.
 CTL_SearchHistory_Title = {0} [Search History]
