--- a/nbbuild/cluster.properties
+++ b/nbbuild/cluster.properties
@@ -96,6 +96,10 @@ clusters.config.cndext.list=\
 	nb.cluster.extide,\
         nb.cluster.java
 
+clusters.config.cndodcs.list=\
+        ${clusters.config.cnd.list},\
+        nb.cluster.cndodcs
+
 clusters.config.dlight.list=\
         nb.cluster.platform,\
         nb.cluster.harness,\
@@ -1109,6 +1113,15 @@ nb.cluster.cndext.depends=\
 	nb.cluster.cnd,\
 	nb.cluster.extide,\
 	nb.cluster.java
+
+nb.cluster.cndodcs.dir=cndodcs
+nb.cluster.cndodcs=\
+        cnd.otool.debugger.api,\
+        cnd.otool.debugger.gdb,\
+        cnd.otool.io
+
+nb.cluster.cndodcs.depends=\
+        nb.cluster.cnd
 
 nb.cluster.dlight.dir=dlight
 nb.cluster.dlight.depends=\
