#258883 - [PHP7] Formatting for anonymous classes
Patch contributed by junichi11@netbeans.org.

--- a/php.editor/src/org/netbeans/modules/php/editor/indent/ui/Bundle.properties
+++ b/php.editor/src/org/netbeans/modules/php/editor/indent/ui/Bundle.properties
@@ -86,6 +86,7 @@ LBL_spaceBeforeCatch="catch"
 LBL_spaceBeforeFinally="finally"
 
 LBL_BeforeParentheses=Before Parentheses
+LBL_spaceBeforeAnonymousClassParen=Anonymous Class
 LBL_spaceBeforeMethodDeclParen=Method / Function Declaration
 LBL_spaceBeforeMethodCallParen=Method / Function Call
 LBL_spaceBeforeIfParen="if", "elseif"
@@ -125,6 +126,7 @@ LBL_spaceBeforeUseTraitBodyLeftBrace=Use Trait Body
 
 LBL_WithinParentheses=Within Parentheses
 LBL_spaceWithinParens=Parentheses
+LBL_spaceWithinAnonymousClassParens=Anonymous Class
 LBL_spaceWithinMethodDeclParens=Method / Function Declaration
 LBL_spaceWithinMethodCallParens=Method / Function Call
 LBL_spaceWithinIfParens="if"
@@ -436,3 +438,4 @@ FmtWrapping.extendsImplemetsKeywordLabel.AccessibleContext.accessibleName=Extend
 FmtWrapping.panel1.AccessibleContext.accessibleDescription=wrapping options panel
 FmtWrapping.wrapAfterAssignOpsCheckBox.text_1=Wrap After Assignment Operators
 FmtAlignment.nlFinallyCheckBox.text="fina&lly"
+FmtBraces.anonymousClassLabel.text=&Anonymous Class:
