Modify project's classpath/modulepath and test classpath/modulepath when creating module-info.java.

--- a/java.j2seproject/src/org/netbeans/modules/java/j2seproject/ui/wizards/Bundle.properties
+++ b/java.j2seproject/src/org/netbeans/modules/java/j2seproject/ui/wizards/Bundle.properties
@@ -251,3 +251,9 @@ TITLE_ImportProjectFolders=Project Location
 LBL_SetFolders=OK
 AN_SetFolders=OK
 AD_SetFolders=N/A
+
+# MoveToModulePathPanelGUI
+LBL_MoveToModulePathPanelGUI_Name=Modulepath
+MSG_ProjectArtifactFormat={0} - {1}
+MoveToModulePathPanelGUI.table.columnModel.title0=Classpath entries
+MoveToModulePathPanelGUI.table.columnModel.title1=Move to modulepath
