Coloring "semantic keywords".

--- a/javascript2.editor/src/org/netbeans/modules/javascript2/editor/resources/Bundle.properties
+++ b/javascript2.editor/src/org/netbeans/modules/javascript2/editor/resources/Bundle.properties
@@ -65,6 +65,7 @@ mod-field=Field
 mod-local-variable-declaration=Local Variable Declaration
 mod-local-variable=Local Variable Use
 mod-custom1=Char OXB in Number Literal
+mod-custom2=Semantical Keyword
 
 # Layer display names
 text/javascript=JavaScript
