--- a/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/launchers/actions/ui/Bundle.properties
+++ b/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/launchers/actions/ui/Bundle.properties
@@ -73,4 +73,7 @@ ${CND_BUILDDIR}   -   build directory (relative to project directory path)<br>\n
 ${CND_PLATFORM}   -   platform name<br>\n\
 ${CND_CONF}       -   configuration name<br>\n\
 ${CND_DLIB_EXT}   -   dynamic library extension</html>
-PublicToolTip=<html>Public launcher is stored in the file nbproject/launcher.properties<br>\nPrivate - nbroject/private/launcher.properties</html>
+PublicToolTip=<html>Public launcher is stored in the file nbproject/launcher.properties<br>\n\
+Private - nbroject/private/launcher.properties</html>
+LaunchersPanel.hideCheckBox.text=&Hide
+HideTooltip=Hide launcher in pop-up menu.
