--- a/nbbuild/cluster.properties
+++ b/nbbuild/cluster.properties
@@ -419,6 +419,7 @@ nb.cluster.ide=\
 	javascript2.jade,\
         javascript2.jquery,\
         javascript2.jsdoc,\
+        javascript2.json,\
         javascript2.kit,\
         javascript2.knockout,\
         javascript2.lexer,\
