Improve 'Fix Uses' action to handle also group uses

--- a/php.editor/src/org/netbeans/modules/php/editor/indent/ui/Bundle.properties
+++ b/php.editor/src/org/netbeans/modules/php/editor/indent/ui/Bundle.properties
@@ -371,7 +371,7 @@ FmtBlankLines.bUseTraitField.text=
 FmtBraces.useTraitLabel.text=Use Trait Body:
 FmtUses.preferFullyQualifiedNamesCheckBox.text=Prefer Fully Qualified Names over Use of Unqualified Names
 FmtUses.preferMultipleUseStatementsCombinedCheckBox.text=Prefer Multiple Use Statements Combined
-FmtUses.startUseWithNamespaceSeparatorCheckBox.text=Start Use Statements with a Namespace Separator
+FmtUses.startUseWithNamespaceSeparatorCheckBox.text=Start Use Statements with Namespace Separator
 FmtUses.aliasesCapitalsOfNamespacesCheckBox.text=Generate Aliases from Capitals of Namespaces (e.g.: use \\Foo\\Bar as FB;)
 FmtWrapping.panel1.AccessibleContext.accessibleName=wrapping options panel
 FmtWrapping.wrapAfterBinOpsCheckBox.text_1=Wrap After Binary Operators
@@ -439,3 +439,4 @@ FmtWrapping.panel1.AccessibleContext.accessibleDescription=wrapping options pane
 FmtWrapping.wrapAfterAssignOpsCheckBox.text_1=Wrap After Assignment Operators
 FmtAlignment.nlFinallyCheckBox.text="fina&lly"
 FmtBraces.anonymousClassLabel.text=&Anonymous Class:
+FmtUses.preferGroupUsesCheckBox.text=Prefer &Group Use Statements
