fixing Bug #258837 [launchers] improve icons - fix color of hidden launcher (and fix the same bug in other html display names)

--- a/cnd.modelimpl/src/org/netbeans/modules/cnd/modelimpl/csm/core/Bundle.properties
+++ b/cnd.modelimpl/src/org/netbeans/modules/cnd/modelimpl/csm/core/Bundle.properties
@@ -39,4 +39,4 @@
 # Portions Copyrighted 2011 Sun Microsystems, Inc.
 
 ProjectDisplayName={0} [{1}]
-ProjectHtmlDisplayName={0} <font color=''!controlShadow''>[{1}]
+ProjectHtmlDisplayName={0} <font color=''!textInactiveText''>[{1}]
