--- a/php.editor/src/org/netbeans/modules/php/editor/indent/ui/Bundle.properties
+++ b/php.editor/src/org/netbeans/modules/php/editor/indent/ui/Bundle.properties
@@ -441,5 +441,5 @@ FmtAlignment.nlFinallyCheckBox.text="fina&lly"
 FmtBraces.anonymousClassLabel.text=&Anonymous Class:
 FmtUses.preferGroupUsesCheckBox.text=Prefer &Group Use Statements
 FmtWrapping.groupUseListLabel.text=G&roup Use List:
-FmtWrapping.groupUseBracesCheckBox.text_1=Group &Use Braces:
+FmtWrapping.groupUseBracesCheckBox.text_1=Group &Use Braces
 FmtBraces.groupUseLabel.text=G&roup Use:
