UI option for JSON comments.

--- a/javascript2.editor/src/org/netbeans/modules/javascript2/editor/ui/Bundle.properties
+++ b/javascript2.editor/src/org/netbeans/modules/javascript2/editor/ui/Bundle.properties
@@ -40,3 +40,5 @@
 # Version 2 license, then the option applies only if the new code is
 # made subject to such option by the copyright holder.
 ECMAScriptPanel.lVersion.text=ECMA Version:
+ECMAScriptPanel.allowJsonComments.text=&Allow comments in JSON files
+ECMAScriptPanel.allowJsonComments.ad=N/A
