Do not show pinned watches in Watches window by default. A popup action that shows the pinned watches is added.

--- a/spi.debugger.ui/src/org/netbeans/modules/debugger/ui/models/Bundle.properties
+++ b/spi.debugger.ui/src/org/netbeans/modules/debugger/ui/models/Bundle.properties
@@ -125,6 +125,7 @@ CTL_BreakpointAction_MoveIntoGroup=Move Into Group...
 
 #WatchesActionsProvider
 CTL_WatchAction_AddNew = New Watch ...
+CTL_WatchAction_ShowPinned = Show Pinned Watches
 CTL_WatchAction_DeleteAll = Delete All
 CTL_WatchAction_Delete = Delete
 CTL_WatchAction_Customize = Edit
