fixing #258668 - Support general term shortcuts - alt+N

--- a/terminal/src/org/netbeans/modules/terminal/actions/Bundle.properties
+++ b/terminal/src/org/netbeans/modules/terminal/actions/Bundle.properties
@@ -50,6 +50,7 @@ CTL_SetTitle=Set Title...
 CTL_PinTab=Pin Tab...
 CTL_UnpinTab=Unpin Tab
 CTL_DumpSequences=Dump Sequences
+CTL_SwitchTab=Switch tab
 
 LBL_SetTitle=Set Title
 LBL_Title=Title
