#258428: type-parametrized exceptions replaced by their upper bounds

--- a/java.hints/src/org/netbeans/modules/java/hints/jdk/Bundle.properties
+++ b/java.hints/src/org/netbeans/modules/java/hints/jdk/Bundle.properties
@@ -70,6 +70,7 @@ DESC_org.netbeans.modules.java.hints.jdk.UseSpecificCatch=Converts catch (Throwa
 ERR_UseSpecificCatch=Can be replaced with multicatch or several catch clauses catching specific exceptions
 FIX_UseSpecificCatch=Replace with multicatch catching specific exceptions
 FIX_UseSpecificCatchSplit=Generate catch handlers for specific exceptions
+FIX_UseSpecificCatchSingle=Replace with catch({0})
 
 DN_org.netbeans.modules.java.hints.jdk.ConvertToARM=Convert to try-with-resources
 DESC_org.netbeans.modules.java.hints.jdk.ConvertToARM=Converts try finally block to try-with-resources
