Allow maximum preserved lines configuration.

--- a/javascript2.editor/src/org/netbeans/modules/javascript2/editor/formatter/ui/json/Bundle.properties
+++ b/javascript2.editor/src/org/netbeans/modules/javascript2/editor/formatter/ui/json/Bundle.properties
@@ -109,3 +109,8 @@ FmtWrapping.arrayInitItemsLabel.AccessibleContext.accessibleName=Array Initializ
 FmtWrapping.arrayInitItemsLabel.AccessibleContext.accessibleDescription=array intitializer items
 FmtWrapping.arrayInitItemsCombo.AccessibleContext.accessibleDescription=array initializer items combo box
 FmtWrapping.arrayInitItemsCombo.AccessibleContext.accessibleName=array initializer items combo box
+
+LBL_BlankLines=Blank Lines
+FmtBlankLines.maxObjectLabel.text=In Object Declarations:
+FmtBlankLines.maximumLabel.text=Maximum Preserved Blank Lines
+FmtBlankLines.maxArrayLabel.text=In Array Declarations:
