--- a/javascript2.editor/src/org/netbeans/modules/javascript2/editor/formatter/ui/Bundle.properties
+++ b/javascript2.editor/src/org/netbeans/modules/javascript2/editor/formatter/ui/Bundle.properties
@@ -308,3 +308,9 @@ FmtWrapping.elementsLabel.text=Class &Elements:
 FmtBraces.classDeclLabel.text=&Class Declaration:
 FmtWrapping.classExtendsLabel.text=&Extends Keyword:
 FmtWrapping.arrowOpsLabel.text=Arro&w Operator:
+
+LBL_BlankLines=Blank Lines
+FmtBlankLines.maximumLabel.text=Maximum Preserved Blank Lines
+FmtBlankLines.maxClassLabel.text=In Class Declarations:
+FmtBlankLines.maxObjectLabel.text=In Object Declarations:
+FmtBlankLines.maxArrayLabel.text=In Array Declarations:
