improving SCM activities displayer to handle more types events

--- a/odcs.ui/src/org/netbeans/modules/odcs/ui/project/activity/Bundle.properties
+++ b/odcs.ui/src/org/netbeans/modules/odcs/ui/project/activity/Bundle.properties
@@ -54,14 +54,11 @@ LBL_Minute=min
 LBL_Sec=sec
 LBL_DurationUnknown=Duration: Unknown
 
-# {0} amount of all commits
-LBL_ShowAllCommits=Show All {0} Commits
-
+LBL_ShowAllCommits=Show All Commits
 # {0} commit Id
 # {1} commit author - name or email adress
 # {2} commit message
 LBL_CommitDesc={0} (by {1}) {2}
-
 # {0} commit Id
 # {1} branch name
 # {2} repository name
@@ -70,11 +67,39 @@ FMT_PushedOne=pushed {0} to {1} in {2} repository
 # {1} branch name
 # {2} repository name
 FMT_PushedMore=pushed {0} commits to {1} in {2} repository
+# {0} commit count, followed by + so the result can be e.g. 50+
+# {1} branch name
+# {2} repository name
+FMT_PushedMoreThan=pushed {0}+ commits to {1} in {2} repository
+# {0} name of the tag
+# {1} commit Id
+# {2} repository name
+FMT_AddedTag=added tag {0} to commit {1} in {2} repository
+# {0} name of the tag
+# {1} repository name
+FMT_DeletedTag=deleted tag {0} in {1} repository
+# {0} branch name
+# {1} repository name
+# {2} commit Id
+FMT_AddedBranchOneCommit=created new branch {0} in {1} repository with commit {2}
+# {0} branch name
+# {1} repository name
+# {2} commit count
+FMT_AddedBranchMoreCommits=created new branch {0} in {1} repository with {2} commits
+# {0} branch name
+# {1} repository name
+# {2} commit count, followed by + so the result can be e.g. 50+
+FMT_AddedBranchMoreCommitsThan=created new branch {0} in {1} repository with {2}+ commits
+# {0} branch name
+# {1} repository name
+FMT_DeletedBranch=deleted branch {0} in {1} repository
 # {0} - commit Id
 # {1} - commit message
 FMT_MailToSubject=commit {0} - {1}
+# {0} repository name
+FMT_PushedUnknown=pushed to {0} repository
 # {0} commit Id (code identifying a commit)
-FMT_CommittedNoRepo=Committed {0} to undefined
+FMT_PushedNoRepo=pushed {0} to undefined
 LBL_OpenIDE=Open in IDE
 # {0} repository name
 FMT_RepositoryCreated=Created {0} repository
