Changing the plugin UI from "Oracle Cloud" to "Oracle JCS with SaaS Extension".

--- a/cloud.oracle/src/org/netbeans/modules/cloud/oracle/serverplugin/Bundle.properties
+++ b/cloud.oracle/src/org/netbeans/modules/cloud/oracle/serverplugin/Bundle.properties
@@ -40,6 +40,6 @@
 
 MSG_REMOTE_SERVER_NAME={0} Remote
 
-OracleDeploymentFactory.displayName=Oracle Cloud
-OracleJ2eePlatformImpl2.displayName=Oracle Cloud
+OracleDeploymentFactory.displayName=Oracle JCS with SaaS Extension
+OracleJ2eePlatformImpl2.displayName=Oracle JCS with SaaS Extension
 OracleDeploymentManager.distributing=Distributing...
