--- a/cloud.oracle/src/org/netbeans/modules/cloud/oracle/ui/Bundle.properties
+++ b/cloud.oracle/src/org/netbeans/modules/cloud/oracle/ui/Bundle.properties
@@ -42,17 +42,17 @@
 CTL_LogsTopComponent={0} Jobs and Logs
 HINT_LogsTopComponent=This is a Jobs and Logs window
 
-Oracle_Node_Name=Oracle Cloud
-Oracle_Node_Short_Description=Oracle Cloud
+Oracle_Node_Name=Oracle JCS with SaaS Extension
+Oracle_Node_Short_Description=Oracle JCS with SaaS Extension
 
-LBL_ACIW_Oracle=Oracle Cloud
-LBL_Name=Oracle Cloud
-LBL_ACIW_Resources=Cloud Resources
+LBL_ACIW_Oracle=Oracle JCS with SaaS Extension
+LBL_Name=Oracle JCS with SaaS Extension
+LBL_ACIW_Resources=JCS Resources
 
-OracleWizardPanel.wrong.credentials=Cannot connect to Oracle Cloud using provided credentials.
-OracleWizardPanel.something.wrong=Cannot connect to Oracle Cloud. Double check your URL and credentials.
-OracleWizardPanel.wrong.SDK=Cannot use specified SDK to connect Oracle Cloud.
-OracleWizardComponent2.jLabel1.text=<html>Following environments were detected in Oracle Cloud and will be available in the IDE as regular deployment servers:
+OracleWizardPanel.wrong.credentials=Cannot connect to Java Cloud Service using provided credentials.
+OracleWizardPanel.something.wrong=Cannot connect to Java Cloud Service. Double check your URL and credentials.
+OracleWizardPanel.wrong.SDK=Cannot use specified SDK to connect Java Cloud Service.
+OracleWizardComponent2.jLabel1.text=<html>Following environments were detected in Java Cloud Service and will be available in the IDE as regular deployment servers:
 OracleWizardComponent2.none=None available yet
 OracleWizardComponent.jLabel2.text=Service Administrator:
 OracleWizardComponent.jLabel3.text=jLabel3
@@ -65,7 +65,7 @@ OracleWizardPanel.missingIdentityDomain=Identity Domain name is required
 OracleWizardPanel.missingServiceInstance=Service Name is required
 OracleWizardPanel.alreadyRegistered=This cloud is already registered in the IDE.
 OracleWizardPanel.missingSDK=SDK is required
-OracleWizardPanel.wrongSDK=Cannot find Oracle Cloud SDK in given folder
+OracleWizardPanel.wrongSDK=Cannot find Java Cloud Service SDK in given folder
 OracleWizardPanel.missingDataCenter=Data center was not specified
 LogsComponent.closeButton.text=&Close
 LogsComponent.refreshButton.text=&Refresh
@@ -98,12 +98,12 @@ OracleWizardComponent.configureButton.text=&Configure
 CustomizerCloudGeneral.configureButton.text=&Configure
 CustomizerCloudGeneral.identityDomainLabel.text=&Identity Domain:
 
-MSG_SDKMisconfigured=There was an error calling Oracle Cloud SDK. Double check your cloud configuration and try again.
+MSG_SDKMisconfigured=There was an error calling Java Cloud Service SDK. Double check your cloud configuration and try again.
 OracleWizardComponent.jLabel6.text=Database Service Name:
 OracleWizardComponent.dbServiceNameTextField.text=
 CustomizerCloudGeneral.jLabel2.text=&Database Service Name:
 CustomizerCloudGeneral.dbServiceNameTextField.text=
-CustomizerCloudGeneral.wrongPwd=Cannot connect to Oracle Cloud using provided credentials.
+CustomizerCloudGeneral.wrongPwd=Cannot connect to Java Cloud Service using provided credentials.
 OracleWizardPanel.noWeblogic=<html>It is recommended you register local Weblogic server instance first.
 OracleWizardComponent.jLabel8.text=Data Center:
 CustomizerCloudGeneral.jLabel3.text=Data Center:
