fixing Bug #259035 Implement wrapper technique in discovery in addition to preload/interpose technique - implementing native tool wrappers

--- a/cnd.discovery/tools/ToolsWrapperWidows/Makefile
+++ b/cnd.discovery/tools/ToolsWrapperWidows/Makefile
@@ -91,8 +91,8 @@ build: .build-post
 # Add your pre 'build' code here...
 
 .build-post: .build-impl
-	@cp ${CND_ARTIFACT_PATH_Debug} g++
-	@cp ${CND_ARTIFACT_PATH_Debug} gcc
+	@cp ${CND_ARTIFACT_PATH_Unix_64} g++
+	@cp ${CND_ARTIFACT_PATH_Unix_64} gcc
 
 
 # clean
