#259071: Do not produce any fixes if thrown exceptions are not subclass of caught ones (errorenous sources))

--- a/java.hints/test/unit/src/org/netbeans/modules/java/hints/jdk/Bundle_test.properties
+++ b/java.hints/test/unit/src/org/netbeans/modules/java/hints/jdk/Bundle_test.properties
@@ -47,6 +47,8 @@ FIX_JoinCatches=FIX_JoinCatches
 
 ERR_UseSpecificCatch=ERR_UseSpecificCatch
 FIX_UseSpecificCatch=FIX_UseSpecificCatch
+FIX_UseSpecificCatchSplit=FIX_UseSpecificCatchSplit
+FIX_UseSpecificCatchSingle=FIX_UseSpecificCatchSplit
 
 TXT_ConvertToARM=TXT_ConvertToARM
 FIX_MergeTryResources=FIX_MergeTryResources
