#259071: catch-all else is propagated to default branch and to possible null-handling branch

--- a/java.hints/test/unit/src/org/netbeans/modules/java/hints/suggestions/Bundle_test.properties
+++ b/java.hints/test/unit/src/org/netbeans/modules/java/hints/suggestions/Bundle_test.properties
@@ -65,3 +65,6 @@ ERR_addExplicitLambdaParameters=ERR_addExplicitLambdaParameters
 ERR_CreateSubclass=ERR_CreateSubclass
 ERR_ToOrIf=ERR_ToOrIf
 ERR_splitIfCondition=ERR_splitIfCondition
+
+HINT_ConvertIfToSwitch=HINT_ConvertIfToSwitch
+FIX_ConvertIfsToSwitch=FIX_ConvertIfsToSwitch
