--- a/cnd.discovery/nbproject/project.properties
+++ b/cnd.discovery/nbproject/project.properties
@@ -10,8 +10,6 @@ release.external/cnd-build-trace-1.0.zip!/Linux-x86_64/libBuildTrace.so     = bi
 release.external/cnd-build-trace-1.0.zip!/Linux-sparc_64/libBuildTrace.so   = bin/Linux-sparc_64/libBuildTrace.so
 release.external/cnd-build-trace-1.0.zip!/MacOSX-x86/libBuildTrace.dylib    = bin/MacOSX-x86/libBuildTrace.dylib
 release.external/cnd-build-trace-1.0.zip!/MacOSX-x86_64/libBuildTrace.dylib = bin/MacOSX-x86_64/libBuildTrace.dylib
-release.external/cnd-build-trace-1.0.zip!/tools-wrapper/Windows/gcc.exe     = bin/tools-wrapper/Windows/gcc.exe
-release.external/cnd-build-trace-1.0.zip!/tools-wrapper/Windows/g++.exe     = bin/tools-wrapper/Windows/g++.exe
-release.external/cnd-build-trace-1.0.zip!/tools-wrapper/Unix/gcc            = bin/tools-wrapper/Unix/gcc
-release.external/cnd-build-trace-1.0.zip!/tools-wrapper/Unix/g++            = bin/tools-wrapper/Unix/g++
+release.external/cnd-build-trace-1.0.zip!/tools-wrapper/Windows/wrapper.exe = bin/tools-wrapper/Windows/wrapper.exe
+release.external/cnd-build-trace-1.0.zip!/tools-wrapper/Unix/wrapper        = bin/tools-wrapper/Unix/wrapper
 nbm.executable.files=bin/**
