moved not maven specific code from maven.graph into new module java.graph and made java.module.graph use it

--- a/java.graph/src/org/netbeans/modules/java/graph/Bundle.properties
+++ b/java.graph/src/org/netbeans/modules/java/graph/Bundle.properties
@@ -38,5 +38,6 @@
 #
 # Portions Copyrighted 2008 Sun Microsystems, Inc.
 
-javac.source=1.8
-javac.compilerargs=-Xlint -Xlint:-serial
+OpenIDE-Module-Display-Category=Infrastructure
+OpenIDE-Module-Name=Java Dependency Graphs
+OpenIDE-Module-Long-Description=Allows to visually show the dependency tree graphs for Java Projects.
