--- a/java.module.graph/src/org/netbeans/modules/java/module/graph/Bundle.properties
+++ b/java.module.graph/src/org/netbeans/modules/java/module/graph/Bundle.properties
@@ -5,3 +5,7 @@ OpenIDE-Module-Name=Module-Info Graph
 GraphTopComponent.zoomIn.text=
 GraphTopComponent.zoomOut.text=
 OpenIDE-Module-Short-Description=Module-info visualizer
+GraphTopComponent.lblFind.text=Find:
+GraphTopComponent.lblPath.text=Path:
+GraphTopComponent.maxPathSpinner.toolTipText=Highlight artifacts on shorter paths, disable paths longer then limit
+GraphTopComponent.lblPath.toolTipText=Highlight artifacts on shorter paths, disable paths longer then limit
