--- a/nbbuild/cluster.properties
+++ b/nbbuild/cluster.properties
@@ -632,6 +632,7 @@ nb.cluster.java=\
         java.editor.lib,\
         java.examples,\
         java.freeform,\
+        java.graph,\
         java.guards,\
         java.hints,\
         java.hints.declarative,\
