#252737 - I18N: "Fix Imports..." is hardcoded

--- a/groovy.editor/src/org/netbeans/modules/groovy/editor/actions/Bundle.properties
+++ b/groovy.editor/src/org/netbeans/modules/groovy/editor/actions/Bundle.properties
@@ -38,3 +38,4 @@
 #
 # Portions Copyrighted 2008 Sun Microsystems, Inc.
 fix-groovy-imports=Fix Imports
+fix-groovy-imports-description=Fixes import statements
