added new module libs.dbx which delivers dbx binaries (new) to the netbeans to make tailwind work with dbx

--- a/nbbuild/cluster.properties
+++ b/nbbuild/cluster.properties
@@ -1118,7 +1118,8 @@ nb.cluster.cndodcs.dir=cndodcs
 nb.cluster.cndodcs=\
         cnd.otool.debugger.api,\
         cnd.otool.debugger.gdb,\
-        cnd.otool.io
+        cnd.otool.io,\
+        libs.dbx
 
 nb.cluster.cndodcs.depends=\
         nb.cluster.cnd
