implemented bz#261525 - split Remote APi module to UI and non-UI part

--- a/nbbuild/cluster.properties
+++ b/nbbuild/cluster.properties
@@ -1133,6 +1133,7 @@ nb.cluster.dlight=\
         dlight.libs.common,\
         dlight.remote,\
         dlight.remote.impl,\
+        dlight.remote.ui,\
         dlight.sendto,\
         git.remote,\
         git.remote.cli,\
