--- a/terminal/src/org/netbeans/modules/terminal/actions/Bundle.properties
+++ b/terminal/src/org/netbeans/modules/terminal/actions/Bundle.properties
@@ -51,6 +51,7 @@ CTL_PinTab=Pin Tab...
 CTL_UnpinTab=Unpin Tab
 CTL_DumpSequences=Dump Sequences
 CTL_SwitchTab=Switch tab
+CTL_NewTab=New tab
 
 LBL_SetTitle=Set Title
 LBL_Title=Title
