New modulepath customizer added.

--- a/java.j2seproject/src/org/netbeans/modules/java/j2seproject/ui/customizer/Bundle.properties
+++ b/java.j2seproject/src/org/netbeans/modules/java/j2seproject/ui/customizer/Bundle.properties
@@ -73,7 +73,7 @@ LBL_CustomizeCompile_Classpath_Remove_JButton=&Remove
 LBL_CustomizeCompile_Classpath_MoveUp_JButton=Move &Up
 LBL_CustomizeCompile_Classpath_MoveDown_JButton=Move &Down
 LBL_CustomizeCompile_Classpath_AddJar_JButton=Add &JAR/Folder...
-LBL_CustomizeCompile_Build_Subprojects=&Build Projects on Classpath
+LBL_CustomizeCompile_Build_Subprojects=&Build Dependencies
 LBL_CustomizeCompile_Enable_Annotation_Processing=Enable Annotation &Processing
 AD_CustomizeCompile_Enable_Annotation_Processing=N/A
 LBL_CustomizeCompile_Enable_Editor_Annotation_Processing=Enable Annotation Processing in &Editor
@@ -462,7 +462,7 @@ LBL_CustomizeLibraries_Run_Tab=Run
 
 LBL_CustomizeLibraries_RunTests_Tab=Run Tests
 
-LBL_CustomizeLibraries_Build_Subprojects=&Build Projects on Classpath
+LBL_CustomizeLibraries_Build_Subprojects=&Build Dependencies
 
 LBL_CustomizeJavadoc_AddOptions_JLabel=Additional Javadoc &Options\:
 
