fixing Bug #259035 Implement wrapper technique in discovery in addition to preload/interpose technique - use wrapper on Mac and Windows

--- a/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/ui/wizards/Bundle.properties
+++ b/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/ui/wizards/Bundle.properties
@@ -502,3 +502,4 @@ FileListEditorPanel.editButton.text=&Edit
 FileListEditorPanel.removeButton.text=&Remove
 FileListEditorPanel.addFolderButton.text=Add from &Folder
 RESOLVE_SYM_LINK=Resolve Symbolic &Links
+UseBuildAnalyzer=U&se Build Analyzer
