#257402 - Stopping of server WildFly Application Server has timed-out

--- a/javaee.wildfly/src/org/netbeans/modules/javaee/wildfly/ide/Bundle.properties
+++ b/javaee.wildfly/src/org/netbeans/modules/javaee/wildfly/ide/Bundle.properties
@@ -68,6 +68,8 @@ MSG_StopServerInterrupted={0} Stop Interrupted.
 
 MSG_SERVER_STOPPED={0} Stopped
 
+MSG_SERVER_KILLED={0} Killed
+
 MSG_STOP_SERVER_FAILED={0} Stop Failed
 
 MSG_START_SERVER_FAILED_HTTP_PORT_IN_USE={0} Start Failed. HTTP Connector port {1} is already in use.
