Stabilized tests, more testcases written

--- a/java.hints/test/unit/src/org/netbeans/modules/java/hints/errors/Bundle_test.properties
+++ b/java.hints/test/unit/src/org/netbeans/modules/java/hints/errors/Bundle_test.properties
@@ -76,3 +76,11 @@ FIX_AddConstructor=FIX_AddConstructor:{0}
 FIX_AccessError_PUBLIC=FIX_AccessError_PUBLIC:{0}
 FIX_AccessError_PROTECTED=FIX_AccessError_PROTECTED:{0}
 FIX_AccessError_PACKAGE_PRIVATE=FIX_AccessError_PACKAGE_PRIVATE:{0}
+
+LBL_Impl_Abstract_Methods=LBL_Impl_Abstract_Methods
+ERR_CannotOverrideAbstractMethods=ERR_CannotOverrideAbstractMethods
+LBL_FIX_Impl_Methods_Enum_Values2=LBL_FIX_Impl_Methods_Enum_Values2
+LBL_FIX_Make_Class_Abstract=LBL_FIX_Make_Class_Abstract
+LBL_FIX_Impl_Abstract_Methods=LBL_FIX_Impl_Abstract_Methods
+WARN_FoundConflictingMethods1=WARN_FoundConflictingMethods1
+WARN_FoundConflictingMethodsMany=WARN_FoundConflictingMethodsMany
