#257892: Fixed member reference in static context. Added new Fix to create constructor reference.

--- a/java.hints/test/unit/src/org/netbeans/modules/java/hints/jdk/Bundle_test.properties
+++ b/java.hints/test/unit/src/org/netbeans/modules/java/hints/jdk/Bundle_test.properties
@@ -70,3 +70,6 @@ TEXT_UnnecessaryBoxing=TEXT_UnnecessaryBoxing
 FIX_UnnecessaryBoxing1=FIX_UnnecessaryBoxing1
 FIX_UnnecessaryBoxing2=FIX_UnnecessaryBoxing2
 FIX_ChangeBoxingToTypecast=FIX_ChangeBoxingToTypecast
+MSG_AnonymousConvertibleToLambda=MSG_AnonymousConvertibleToLambda
+FIX_ConvertToMemberReference=FIX_ConvertToMemberReference
+FIX_ConvertToLambda=FIX_ConvertToLambda
