fixed Bug #262155 Create .h with .c file automatically

--- a/cnd.ui/src/org/netbeans/modules/cnd/editor/filecreation/Bundle.properties
+++ b/cnd.ui/src/org/netbeans/modules/cnd/editor/filecreation/Bundle.properties
@@ -61,6 +61,7 @@ LBL_SimpleTargetChooserPanel_Name=Name and Location
 LBL_NewCndFileChooserPanelGUI_NewFilePrefix=new
 
 LBL_TargetChooser_FileName_Label=Class &Name:
+LBL_TargetChooser_FileHeaderName_Label=File &Name:
 LBL_TargetChooser_Project_Label=&Project:
 LBL_TargetChooser_Folder_Label=Fo&lder:
 LBL_TargetChooser_Browse_Button=Bro&wse...
@@ -110,6 +111,7 @@ FMT_PhysicalView_GroupName={1} - {0}
 AD_SimpleTargetChooserPanelGUI_1=Create New File Panel
 
 NewClassSuggestedName=newClass
+NewFileSuggestedName=newFile
 NewFormSuggestedName=newForm
 
 LBL_TargetChooser_ClassName_Label=File &Name:
@@ -134,3 +136,4 @@ HINT_project=Project in {0}
 HINT_group=Source folder in {0}
 
 MSG_missing_class_header_template=Missing class header template {0}.
+MSG_missing_file_header_template=Missing file header template {0}.
