--- a/cnd/src/org/netbeans/modules/cnd/resources/Bundle.properties
+++ b/cnd/src/org/netbeans/modules/cnd/resources/Bundle.properties
@@ -49,6 +49,8 @@ Templates/cFiles=C
 Templates/cFiles/main.c=C Main File
 Templates/cFiles/file.h=C Header File
 Templates/cFiles/file.c=C Source File
+Templates/cFiles/file_header.c=C Source and Header File
+Templates/cFiles/file_header.group=C Source and Header File
 
 # C++ Templates
 Templates/cppFiles=C++
