fixed Bug #262155 Create .h with .c file automatically - add template to create C++ source and header

--- a/cnd/src/org/netbeans/modules/cnd/resources/Bundle.properties
+++ b/cnd/src/org/netbeans/modules/cnd/resources/Bundle.properties
@@ -60,6 +60,8 @@ Templates/cppFiles/file.h=C++ Header File
 Templates/cppFiles/file=C++ Standard Header File
 Templates/cppFiles/file.cc=C++ Source File
 Templates/cppFiles/class.cc=C++ Class
+Templates/cppFiles/file_header.cc=C++ Source and Header File
+Templates/cppFiles/file_header.group=C++ Source and Header File
 
 # Fortran Templates
 Templates/fortranFiles=Fortran
