fixed Bug #262211 [launchers] Run Launchers in Own Tab

--- a/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/launchers/actions/ui/Bundle.properties
+++ b/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/launchers/actions/ui/Bundle.properties
@@ -77,3 +77,4 @@ PublicToolTip=<html>Public launcher is stored in the file nbproject/launcher.pro
 Private - nbroject/private/launcher.properties</html>
 LaunchersPanel.hideCheckBox.text=&Hide
 HideTooltip=Hide launcher in pop-up menu.
+LaunchersPanel.runInOwnTabCheckBox.text=Run in Own Output &Tab
