--- a/nbbuild/cluster.properties
+++ b/nbbuild/cluster.properties
@@ -1485,6 +1485,7 @@ nb.cluster.webcommon=\
         javascript.nodejs,\
         javascript.v8debug,\
         javascript.v8debug.ui,\
+        javascript2.source.query,\
         languages.apacheconf,\
         languages.ini,\
         lib.v8debug,\
