Fix broken unittest in db.core
The unittest in db.core revealed a broken LogFileLogger, that used
messages from the wrong bundle. The messages were fixed and
put into the correct bundle.

--- a/db.core/src/org/netbeans/modules/db/api/sql/execute/Bundle.properties
+++ b/db.core/src/org/netbeans/modules/db/api/sql/execute/Bundle.properties
@@ -38,5 +38,9 @@
 #
 # Portions Copyrighted 2008 Sun Microsystems, Inc.
 MSG_ErrorDialogTitle=Error
-LBL_ExecutionFinished=SQL Execution completed in {0} seconds with {1} errors.  Please see the NetBeans message log for details about any errors.
+# {0} - execution time
+# {1} - total number of errors
+LBL_ExecutionFinished=Execution finished after {0,number,0.###} s, {1,choice,0#no errors|1#1 error|1.0<{1,number,integer} errors} occurred.
+LBL_ExecutionCancelled=Execution canceled.
+# {0} - statement that was executed
 MSG_SQLExecutionException=Encountered an exception while executing the following statement:\n{0}
