#257458: SQL statements returning resultsets are executed twice
Queries were run two times to support paging. One query was done to get
the total number of rows.

As the support for scrollable cursors is very limited and spotty, it was decided
to remove paging from the display component.

Observations:
- Fetching the whole resultset is impractical in any case
  there were observations of JDBC drivers buffering the whole resultset leading to an OOME
- Using scrollable cursors is a gamble:
  - Oracle emulates scrollable cursors by buffering the resultset
  - MySQL needs a special parameter to use server side cursors

--- a/db.dataview/src/org/netbeans/modules/db/dataview/output/Bundle.properties
+++ b/db.dataview/src/org/netbeans/modules/db/dataview/output/Bundle.properties
@@ -100,11 +100,9 @@ TOOLTIP_set_cell_to_default=Set to default
 
 MSG_cancel_printing=User canceled printing
 
-LBL_max_rows=Page Size:
+LBL_max_rows=Max. rows:
 
 LBL_page_of=Page: {0} of {1}
-
-LBL_total_rows =Total Rows:
 
 LBL_matchbox =Matching Rows:
 
