--- a/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/ui/runprofiles/Bundle.properties
+++ b/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/ui/runprofiles/Bundle.properties
@@ -75,3 +75,57 @@ RerunArguments.title.text=Re-run with Arguments
 LBL_run_advanced_run=Run
 LBL_run_advanced_cancel=Cancel
 
+RUNNING=Run
+
+DirectoryChooserPanel.directoryLabel.text=&Directory:
+DirectoryChooserPanel.browseButton.text=&Browse
+DirectoryChooserPanel.directoryTextField.text=
+
+ConsoleType_LBL=Console Type
+ConsoleType_HINT=Controls where a program is run
+ConsoleType_Default=Default
+ConsoleType_External=External Terminal
+ConsoleType_Internal=Internal Terminal
+ConsoleType_Output=Standard Output
+
+TerminalType_LBL=External Terminal Type
+TerminalType_HINT=What terminal emulator to use
+TerminalType_None=None
+TerminalType_Default=Default
+TerminalType_GNOME=Gnome Terminal
+TerminalType_KDE=KDE Konsole
+TerminalType_XTerm=XTerm
+TerminalType_CommandWindow=Command Window
+
+RemoveInstrumentation_LBL=Remove Instrumentation
+RemoveInstrumentation_HINT=Remove "-xinstrument=datarace" instrumentation on run action
+RemoveInstrumentation_Ask=Ask
+RemoveInstrumentation_Yes=Yes
+RemoveInstrumentation_No=No
+
+LBL_RunPrompt=[Press Enter to close window]
+
+Err_NoTermFound=No terminal program found. Switching output to Output Window. No input will be available.
+Err_MissingDorunScript=Missing dorun script.
+
+GeneralName=General
+GeneralTT=General
+ArgumentsName=Arguments
+ArgumentsHint=Arguments for the main() function
+RunDirectoryName=Run Directory
+RunDirectoryHint=The directory which the binary should be executed from
+RunCommandName=Run Command
+RunCommandHint=The command to be executed including arguments. "${OUTPUT_PATH}" expands to project build output.
+ShellSyntaxSupported={0} syntax could be used.
+ComplexRunCommandHint=The command to be executed. Note that profiling is not available for such command.
+ComplexCommandText=For such kind of commands profiling is not available.
+ComplexCommandTitle=Profiling is not available
+BuildFirstName=Build First
+BuildFirstHint=Build the project before executing binary
+EnvironmentName=Environment
+EnvironmentHint=Environment variables
+DirectoryChooserPanel.directoryLabel.mn=D
+DirectoryChooserPanel.browseButton.mn=B
+
+Run_Directory=Run Directory
+SelectLabel=Select
