fixing Bug #262270 Split cnd.makeproject module on module and module UI - move launcher action in ui package - move user gestures from ui module

--- a/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/ui/launchers/actions/Bundle.properties
+++ b/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/ui/launchers/actions/Bundle.properties
@@ -78,3 +78,10 @@ Private - nbroject/private/launcher.properties</html>
 LaunchersPanel.hideCheckBox.text=&Hide
 HideTooltip=Hide launcher in pop-up menu.
 LaunchersPanel.runInOwnTabCheckBox.text=Run in Own Output &Tab
+
+LBL_BuildAsAction_Name=Build
+LBL_RunAsAction_Name=Run
+LBL_DebugAsAction_Name=Debug
+LBL_StepIntoAction_Name=Step Into
+
+LBL_DefaultAction_Name=Default
