--- a/languages.ini/build.xml
+++ b/languages.ini/build.xml
@@ -6,9 +6,10 @@
     <description>Builds, tests, and runs the project org.netbeans.modules.languages.ini</description>
     <import file="../nbbuild/templates/projectized.xml"/>
 
-<!--    <taskdef name="jflex"
+    <!--taskdef name="jflex"
         classname="JFlex.anttask.JFlexTask"
-        classpath="/usr/share/ant/lib/jflex.jar" />-->
+        classpath="/opt/jflex-1.4/lib/JFlex.jar" /-->
+
     <target name="gen-lexer" >
         <jflex file="tools/IniColoringLexer.flex" destdir="src" skel="tools/skeleton.netbeans" />
     </target>
