--- a/php.latte/build.xml
+++ b/php.latte/build.xml
@@ -2,12 +2,11 @@
 <project basedir="." default="netbeans" name="php.latte">
     <description>Builds, tests, and runs the project org.netbeans.modules.php.latte</description>
     <import file="../nbbuild/templates/projectized.xml"/>
-<!--    <taskdef name="jflex"
+
+    <!--taskdef name="jflex"
         classname="JFlex.anttask.JFlexTask"
-        classpath="/opt/jflex-1.6.0/lib/jflex-1.6.0.jar" />-->
-<!--    <taskdef name="jflex"
-        classname="JFlex.anttask.JFlexTask"
-        classpath="/Users/Shared/jflex-1.4.3/jflex-1.4.3/lib/JFlex.jar" />-->
+        classpath="/opt/jflex-1.4/lib/JFlex.jar" /-->
+
     <target name="gen-toplexer" >
         <jflex file="tools/LatteTopColoringLexer.flex" destdir="src" skel="tools/skeleton.netbeans" />
     </target>
