--- a/php.twig/build.xml
+++ b/php.twig/build.xml
@@ -3,9 +3,9 @@
     <description>Builds, tests, and runs the project org.netbeans.modules.php.twig</description>
     <import file="../nbbuild/templates/projectized.xml"/>
 
-<!--        <taskdef name="jflex"
+    <!--taskdef name="jflex"
         classname="JFlex.anttask.JFlexTask"
-        classpath="/opt/jflex-1.6.0/lib/jflex-1.6.0.jar" />-->
+        classpath="/opt/jflex-1.4/lib/JFlex.jar" /-->
 
     <target name="gen-toplexer" >
         <jflex file="tools/TwigTopColoringLexer.flex" destdir="src" skel="tools/skeleton.netbeans" />
